// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLead Component should match snapshot for when IconText supplied 1`] = `
<DocumentFragment>
  <div
    class="sc-ftvSup sc-papXJ sc-kDDrLX jaugmt IndTi gClGim"
    style="padding-bottom: 32px;"
  >
    <div
      class="sc-crXcEl ecrMWH"
    >
      <i
        class="fa"
      />
      <h3
        class="sc-eCYdqJ sc-evZas cBOZwO iNEMYx"
      >
         BLOG 
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLead Component should match snapshot for when TextLink is supplied 1`] = `
<DocumentFragment>
  <div
    class="sc-ftvSup sc-papXJ sc-kDDrLX jaugmt IndTi gClGim"
    style="padding-bottom: 32px;"
  >
    <div
      class="sc-crXcEl ecrMWH"
    >
      <h3
        class="sc-eCYdqJ sc-evZas cBOZwO iNEMYx"
      >
         BLOG 
      </h3>
    </div>
    <a
      class="sc-bczRLJ fqnNaQ"
      href="/blog"
    />
  </div>
</DocumentFragment>
`;
